{
  "version": 4,
  "terraform_version": "1.16.3",
  "serial": 33,
  "lineage": "d33ae5ef-0f02-be7f-0a05-6ac065519f0f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a3ec124e094d695",
            "arn": "arn:aws:ec2:us-east-1:163092837518:elastic-ip/eipalloc-00a3ec124e094d695",
            "association_id": "eipassoc-01d4736d744e2d9e6",
            "domain": "vpc",
            "id": "eipalloc-00a3ec124e094d695",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08d9daefac9646690",
            "private_dns": "ip-10-0-0-216.ec2.internal",
            "private_ip": "10.0.0.216",
            "public_dns": "ec2-44-197-65-227.compute-1.amazonaws.com",
            "public_ip": "44.197.65.227",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "two-az-network-nat-a"
            },
            "tags_all": {
              "Name": "two-az-network-nat-a"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "eipalloc-00a3ec124e094d695",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c9e6e665bd5cbf8",
            "arn": "arn:aws:ec2:us-east-1:163092837518:elastic-ip/eipalloc-00c9e6e665bd5cbf8",
            "association_id": "eipassoc-039feb24c4675fb5f",
            "domain": "vpc",
            "id": "eipalloc-00c9e6e665bd5cbf8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0613444d5fb7d8e85",
            "private_dns": "ip-10-0-1-94.ec2.internal",
            "private_ip": "10.0.1.94",
            "public_dns": "ec2-3-219-74-183.compute-1.amazonaws.com",
            "public_ip": "3.219.74.183",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "two-az-network-nat-b"
            },
            "tags_all": {
              "Name": "two-az-network-nat-b"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "eipalloc-00c9e6e665bd5cbf8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:internet-gateway/igw-08d5e1e4cc8e55ede",
            "id": "igw-08d5e1e4cc8e55ede",
            "owner_id": "163092837518",
            "region": "us-east-1",
            "tags": {
              "Name": "two-az-network-igw"
            },
            "tags_all": {
              "Name": "two-az-network-igw"
            },
            "vpc_id": "vpc-0193f19a22d950c7a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "igw-08d5e1e4cc8e55ede",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00a3ec124e094d695",
            "association_id": "eipassoc-01d4736d744e2d9e6",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0f7a46e22b82dbc76",
            "network_interface_id": "eni-08d9daefac9646690",
            "private_ip": "10.0.0.216",
            "public_ip": "44.197.65.227",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-043436099238f63fe",
            "tags": {
              "Name": "two-az-network-nat-a"
            },
            "tags_all": {
              "Name": "two-az-network-nat-a"
            },
            "vpc_id": "vpc-0193f19a22d950c7a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "nat-0f7a46e22b82dbc76",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.main",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00c9e6e665bd5cbf8",
            "association_id": "eipassoc-039feb24c4675fb5f",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b064242e2e19b053",
            "network_interface_id": "eni-0613444d5fb7d8e85",
            "private_ip": "10.0.1.94",
            "public_ip": "3.219.74.183",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ca0e7e8aee7599b2",
            "tags": {
              "Name": "two-az-network-nat-b"
            },
            "tags_all": {
              "Name": "two-az-network-nat-b"
            },
            "vpc_id": "vpc-0193f19a22d950c7a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "nat-0b064242e2e19b053",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.main",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_a_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-060584ea97df5940a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f7a46e22b82dbc76",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-060584ea97df5940a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-060584ea97df5940a"
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.main",
            "aws_nat_gateway.a",
            "aws_route_table.private_a",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_b_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03e5451990cb4f99a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b064242e2e19b053",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-03e5451990cb4f99a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-03e5451990cb4f99a"
          },
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.main",
            "aws_nat_gateway.b",
            "aws_route_table.private_b",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08d5e1e4cc8e55ede",
            "id": "r-rtb-0fa4ce451cc8d3d7f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0fa4ce451cc8d3d7f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0fa4ce451cc8d3d7f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:route-table/rtb-060584ea97df5940a",
            "id": "rtb-060584ea97df5940a",
            "owner_id": "163092837518",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f7a46e22b82dbc76",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "two-az-network-private-a"
            },
            "tags_all": {
              "Name": "two-az-network-private-a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0193f19a22d950c7a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "rtb-060584ea97df5940a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:route-table/rtb-03e5451990cb4f99a",
            "id": "rtb-03e5451990cb4f99a",
            "owner_id": "163092837518",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b064242e2e19b053",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "two-az-network-private-b"
            },
            "tags_all": {
              "Name": "two-az-network-private-b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0193f19a22d950c7a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "rtb-03e5451990cb4f99a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:route-table/rtb-0fa4ce451cc8d3d7f",
            "id": "rtb-0fa4ce451cc8d3d7f",
            "owner_id": "163092837518",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08d5e1e4cc8e55ede",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "two-az-network-public"
            },
            "tags_all": {
              "Name": "two-az-network-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0193f19a22d950c7a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "rtb-0fa4ce451cc8d3d7f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca5b410e25cc0cd7",
            "region": "us-east-1",
            "route_table_id": "rtb-060584ea97df5940a",
            "subnet_id": "subnet-0652fcbd2c98e39da"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "rtbassoc-0ca5b410e25cc0cd7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_a",
            "aws_subnet.private_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015cdc09bdb207b8c",
            "region": "us-east-1",
            "route_table_id": "rtb-03e5451990cb4f99a",
            "subnet_id": "subnet-0de50d72aa036b128"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "rtbassoc-015cdc09bdb207b8c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_b",
            "aws_subnet.private_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-088d0c24e3175fddc",
            "region": "us-east-1",
            "route_table_id": "rtb-0fa4ce451cc8d3d7f",
            "subnet_id": "subnet-043436099238f63fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "rtbassoc-088d0c24e3175fddc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f94136e0ab0c622f",
            "region": "us-east-1",
            "route_table_id": "rtb-0fa4ce451cc8d3d7f",
            "subnet_id": "subnet-0ca0e7e8aee7599b2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "rtbassoc-0f94136e0ab0c622f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:security-group/sg-088987a65ce9823af",
            "description": "Public HTTP entry point for a future load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow the future load balancer to reach targets",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-088987a65ce9823af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow public HTTP traffic to the future load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "two-az-network-alb",
            "name_prefix": "",
            "owner_id": "163092837518",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "two-az-network-alb"
            },
            "tags_all": {
              "Name": "two-az-network-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0193f19a22d950c7a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "sg-088987a65ce9823af",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:security-group/sg-06d99b8c2e71d3442",
            "description": "Application traffic accepted only from the load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic from future workloads",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d99b8c2e71d3442",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow application traffic only from the load balancer",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-088987a65ce9823af"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "two-az-network-workload",
            "name_prefix": "",
            "owner_id": "163092837518",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "two-az-network-workload"
            },
            "tags_all": {
              "Name": "two-az-network-workload"
            },
            "timeouts": null,
            "vpc_id": "vpc-0193f19a22d950c7a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "sg-06d99b8c2e71d3442",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:subnet/subnet-0652fcbd2c98e39da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0652fcbd2c98e39da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "163092837518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "two-az-network-private-a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "two-az-network-private-a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0193f19a22d950c7a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "subnet-0652fcbd2c98e39da",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:subnet/subnet-0de50d72aa036b128",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de50d72aa036b128",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "163092837518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "two-az-network-private-b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "two-az-network-private-b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0193f19a22d950c7a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "subnet-0de50d72aa036b128",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:subnet/subnet-043436099238f63fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043436099238f63fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "163092837518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "two-az-network-public-a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "two-az-network-public-a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0193f19a22d950c7a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "subnet-043436099238f63fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:subnet/subnet-0ca0e7e8aee7599b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca0e7e8aee7599b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "163092837518",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "two-az-network-public-b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "two-az-network-public-b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0193f19a22d950c7a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "subnet-0ca0e7e8aee7599b2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:vpc/vpc-0193f19a22d950c7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-012febae8d74beaa3",
            "default_route_table_id": "rtb-0633e7dc2c4c3e91b",
            "default_security_group_id": "sg-07cc67d446f226bdb",
            "dhcp_options_id": "dopt-053841e023fedd7b4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0193f19a22d950c7a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0633e7dc2c4c3e91b",
            "owner_id": "163092837518",
            "region": "us-east-1",
            "tags": {
              "Name": "two-az-network"
            },
            "tags_all": {
              "Name": "two-az-network"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "vpc-0193f19a22d950c7a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:vpc-endpoint/vpce-0a5f01edf64a4c8c8",
            "cidr_blocks": [
              "16.15.160.0/19",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18",
              "16.15.156.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a5f01edf64a4c8c8",
            "ip_address_type": "ipv4",
            "owner_id": "163092837518",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-03e5451990cb4f99a",
              "rtb-060584ea97df5940a"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "two-az-network-s3"
            },
            "tags_all": {
              "Name": "two-az-network-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0193f19a22d950c7a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "vpce-0a5f01edf64a4c8c8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.private_a",
            "aws_route_table.private_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:security-group-rule/sgr-0d574e3aee23f4db1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow the future load balancer to reach targets",
            "from_port": null,
            "id": "sgr-0d574e3aee23f4db1",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-088987a65ce9823af",
            "security_group_rule_id": "sgr-0d574e3aee23f4db1",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "sgr-0d574e3aee23f4db1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "workload_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:security-group-rule/sgr-0c07d40c9989d8ddf",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow outbound traffic from future workloads",
            "from_port": null,
            "id": "sgr-0c07d40c9989d8ddf",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-06d99b8c2e71d3442",
            "security_group_rule_id": "sgr-0c07d40c9989d8ddf",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "sgr-0c07d40c9989d8ddf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.workload",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:security-group-rule/sgr-056bd745bea6d0d94",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow public HTTP traffic to the future load balancer",
            "from_port": 80,
            "id": "sgr-056bd745bea6d0d94",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-088987a65ce9823af",
            "security_group_rule_id": "sgr-056bd745bea6d0d94",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "sgr-056bd745bea6d0d94",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "workload_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163092837518:security-group-rule/sgr-056288565cef683eb",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow application traffic only from the load balancer",
            "from_port": 8080,
            "id": "sgr-056288565cef683eb",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-088987a65ce9823af",
            "region": "us-east-1",
            "security_group_id": "sg-06d99b8c2e71d3442",
            "security_group_rule_id": "sgr-056288565cef683eb",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "163092837518",
            "id": "sgr-056288565cef683eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.workload",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}